# OpenCV-CV1

./: .gitignore
Sample-Code-Cpp/: CMakeLists.txt  sampleCode.cpp
cmake-demo/: CMakeLists.txt  myCode1.cpp
vision/code/: CMakeLists.txt  erosion_dilation_basics.cpp  qr_code_detector.cpp  qr_code_video.cpp
week1/assignment/code/: CMakeLists.txt  assignment.cpp
week1/section1/code/: CMakeLists.txt  color_images.cpp  image_basics.cpp
week1/section2/code/: CMakeLists.txt  image_mask.cpp  image_operations.cpp
week1/section3/code/: CMakeLists.txt  basic_math_operations.cpp
week1/section4/code/: CMakeLists.txt  application_sunglass_filter.cpp
week1/section5/code/: CMakeLists.txt  sunglass_filter_bitwise.cpp
week1/section6/code/: CMakeLists.txt  basic_annotations.cpp  text_annotation.cpp
week2-course-cpp/: using_the_mouse_for_annotation.cpp
week2/assignment/: submission.cpp
week2/assignment2/: CMakeLists.txt  submission.cpp
week2/section1/code/: CMakeLists.txt  camera_video_write.cpp  video_basics.cpp
week2/section2/code/: CMakeLists.txt  keyboard_basics.cpp  mouse_basics.cpp  trackbar_basics.cpp
week3-course-cpp/: CMakeLists.txt  erosionDilation.cpp  thresholding.cpp
week3/section1/code/: CMakeLists.txt  thresholding_basics.cpp
week3/section2/code/: CMakeLists.txt  closing_basics.cpp  erosion_dilation_basics.cpp  erosion_dilation_manual.cpp  opening_basics.cpp
week3/section3/code/: CMakeLists.txt  blob_detection.cpp  connected_component_analysis.cpp  contour_analysis.cpp
